mudanças básicas para melhor funcionamento da page

--- a/cadastroclientes.html
+++ b/cadastroclientes.html
@@ -16,6 +16,8 @@
     </style>
 </head>
 <body>
+    <h1>Cadastro de Clientes</h1>
+    <hr>
     <div class="container">
         <label for="nome">Nome</label>
         <input type="text" id="nome" placeholder="Informe o nome" />
