--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <nav>
         <a href="home.html" target="centro">Home</a>
         <a href="cadastroclientes.html" target="centro">Cadastro de Clientes</a>
+        <a href="alterarcadastro.html" target="centro">Alteração de Cadastro</a>
 
     </nav>
 </div>
