--- a/testemostrarclientes.html
+++ b/testemostrarclientes.html
@@ -29,7 +29,7 @@
                                     <p>${clientes[i].email}</p>
                                     <p>${clientes[i].fone}</p>`
                 }
-                document.getElementById("mostrar").innerHTML = paragrafo;
+                document.getElementById("mostrar").innerHTML = paragrafo
             }
             
     </script>
