--- a/alterarcadastro.html
+++ b/alterarcadastro.html
@@ -11,11 +11,13 @@
     <label>Digite um codigo de cliente</label>
 <input type="number" id="idcliente" />
 <button onclick="pesquisar()">Pesquisar</button>
+<button onclick="excluir()">Excluir</button>
 <hr>
 <input id="nome" />
 <input id="email" />
 <input id="fone" />
 <button onclick="alterar(limpar)">Gravar e alterar</button>
+
 
 <script>
     function pesquisar(){
@@ -61,6 +63,13 @@
         document.getElementById("nome").value = ""
         document.getElementById("email").value = ""
         document.getElementById("fone").value = ""
+    }
+
+    function excluir(){
+        var idpesquisa = document.getElementById("idcliente").value
+        
+        fetch(`http://localhost:3000/clientes/${idpesquisa}` , {method: 'DELETE'})
+           .then(data => data.json())
     }
 </script>
 </body>
